Fix ugly overflow of pre tag

--- a/static/main.css
+++ b/static/main.css
@@ -172,7 +172,7 @@
   }
   
   section {
-    background-color: var(--body-bg);
+    background-color: rgba(255,255,255,0.8);
     text-align: center;
     max-width: 100%;
     max-height: 100%;
